Added ExplosivePick durability and some checks. Still needs edge case fixes.